xufeisofly.mcache.efc62dedf378cc2512706312919eccb8c539748d
Running as unit: run-p2845534-i15425608.scope; invocation ID: c3a0481f297d4279975f09a7b75d5d6a
   Compiling proc-macro2 v1.0.95
   Compiling unicode-ident v1.0.18
   Compiling libc v0.2.174
    Checking cfg-if v1.0.1
    Checking stable_deref_trait v1.2.0
   Compiling autocfg v1.5.0
    Checking smallvec v1.15.1
   Compiling shlex v1.3.0
   Compiling cc v1.2.30
   Compiling typenum v1.18.0
    Checking pin-project-lite v0.2.16
    Checking writeable v0.6.1
   Compiling lock_api v0.4.13
   Compiling parking_lot_core v0.9.11
   Compiling version_check v0.9.5
    Checking litemap v0.8.0
   Compiling quote v1.0.40
   Compiling syn v2.0.104
   Compiling generic-array v0.14.7
    Checking memchr v2.7.5
    Checking futures-core v0.3.31
   Compiling icu_properties_data v2.0.1
    Checking scopeguard v1.2.0
    Checking bytes v1.10.1
    Checking getrandom v0.2.16
   Compiling icu_normalizer_data v2.0.0
   Compiling zerocopy v0.8.26
    Checking zeroize v1.8.1
    Checking futures-sink v0.3.31
    Checking rustls-pki-types v1.12.0
    Checking parking_lot v0.12.4
   Compiling ring v0.17.14
    Checking mio v1.0.4
    Checking socket2 v0.6.0
    Checking signal-hook-registry v1.4.5
    Checking untrusted v0.9.0
    Checking futures-channel v0.3.31
   Compiling num-traits v0.2.19
    Checking futures-io v0.3.31
    Checking futures-task v0.3.31
   Compiling serde v1.0.219
    Checking slab v0.4.10
    Checking log v0.4.27
    Checking pin-utils v0.1.0
   Compiling crc16 v0.4.0
   Compiling rustls v0.23.31
    Checking rand_core v0.6.4
    Checking minimal-lexical v0.2.1
    Checking utf8_iter v1.0.4
    Checking either v1.15.0
    Checking once_cell v1.21.3
    Checking crypto-common v0.1.6
    Checking block-buffer v0.10.4
    Checking subtle v2.6.1
    Checking percent-encoding v2.3.1
   Compiling serde_json v1.0.142
   Compiling semver v1.0.26
   Compiling syn v1.0.109
    Checking form_urlencoded v1.2.1
    Checking digest v0.10.7
   Compiling aho-corasick v1.1.3
    Checking bytes-utils v0.1.4
    Checking nom v7.1.3
    Checking ppv-lite86 v0.2.21
    Checking rand_chacha v0.3.1
    Checking ryu v1.0.20
    Checking openssl-probe v0.1.6
    Checking cookie-factory v0.3.2
   Compiling regex-syntax v0.8.5
    Checking cpufeatures v0.2.17
    Checking itoa v1.0.15
    Checking sha-1 v0.10.1
    Checking rustls-native-certs v0.8.1
    Checking float-cmp v0.10.0
    Checking rand v0.8.5
    Checking redis-protocol v6.0.0
   Compiling synstructure v0.13.2
   Compiling regex-automata v0.4.9
    Checking rustls-webpki v0.103.4
    Checking socket2 v0.5.10
    Checking urlencoding v2.1.3
    Checking arc-swap v1.7.1
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.0
   Compiling zerovec-derive v0.11.1
   Compiling displaydoc v0.2.5
   Compiling tokio-macros v2.5.0
    Checking zerofrom v0.1.6
   Compiling futures-macro v0.3.31
    Checking tokio v1.47.0
    Checking yoke v0.8.0
    Checking zerovec v0.11.2
    Checking zerotrie v0.2.2
   Compiling serde_derive v1.0.219
    Checking futures-util v0.3.31
   Compiling fred-macros v0.1.0
   Compiling async-trait v0.1.88
   Compiling regex v1.11.1
   Compiling mcache-attr v0.1.0 (/tmp/nix-shell.uUVugk/xufeisofly_mcache_bjijspyj/mcache-attr)
    Checking tinystr v0.8.1
    Checking icu_locale_core v2.0.0
    Checking potential_utf v0.1.2
    Checking icu_collections v2.0.0
   Compiling mcache-call v0.1.0 (/tmp/nix-shell.uUVugk/xufeisofly_mcache_bjijspyj/mcache-call)
    Checking icu_provider v2.0.0
    Checking icu_normalizer v2.0.0
    Checking icu_properties v2.0.1
    Checking futures-executor v0.3.31
    Checking idna_adapter v1.2.1
    Checking futures v0.3.31
    Checking idna v1.0.3
    Checking url v2.5.4
    Checking tokio-stream v0.1.17
    Checking tokio-rustls v0.26.2
    Checking tokio-util v0.7.15
    Checking fred v10.1.0
error[E0275]: overflow evaluating the requirement `{async block@/home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/fred-10.1.0/src/runtime/_tokio.rs:299:18: 299:28}: std::marker::Send`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/fred-10.1.0/src/runtime/_tokio.rs:299:5
    |
299 | /     tokio::spawn(async move {
300 | |       inner.backchannel.clear_router_state(&inner).await;
301 | |       let result = router_commands::start(&inner).await;
...   |
312 | |       result
313 | |     })
    | |______^
    |
    = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`fred`)
note: required by a bound in `tokio::spawn`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/tokio-1.47.0/src/task/spawn.rs:168:21
    |
166 |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
    |            ----- required by a bound in this function
167 |     where
168 |         F: Future + Send + 'static,
    |                     ^^^^ required by this bound in `spawn`

For more information about this error, try `rustc --explain E0275`.
error: could not compile `fred` (lib) due to 1 previous error
